Fix for bug #22377: iNCONSISTENCY WITH null

Backport. See #20910: NOT NULL column reported as NULL in SHOW FIELDS or INFORMATION_SCHEMA